# IB_Trading_FullTested

./: .gitignore  CONFIG_GUIDE.md  DEPLOYMENT.md  Dockerfile  LICENSE  Python环境问题解决.md  README.md  build_exe.py  continuous_runner.py  deploy-windows.bat  deploy.bat  deploy.sh  docker-compose.yml  install_service.bat  pyproject.toml  requirements.txt  test_exe.py  trading_config.json  一键部署.bat  修复Python环境.bat  启动TQQQ策略.bat  启动策略.bat  快速测试.bat  快速部署指南.md  持续运行策略.bat  新电脑部署指南.md  智能启动.bat  服务管理.bat  检测Python.bat  测试TQQQ策略.bat  测试策略.bat  测试邮件.bat  清理服务.bat  环境检测.bat  策略说明.md  简单启动.bat  部署指南.md  配置邮件.bat
ib_async/: debug_test.py  email_notifier.py  email_service.py  pyproject.toml  requirements.txt  simple_test.py  test_strategy.py  tqqq_final_trading.py  tqqq_trading.py
ib_async/examples/: qt_ticker_table.py
ib_async/ib_async/: ib.py
ib_async/tests/: conftest.py
trading_strategy/: README.md  tqqq_final_trading.py  启动策略.bat  安装依赖.bat
